cf_analysis_results/checkerframework_3.42.0_results/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8.txt
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/test/TestXML2JSON.java:57: error: (required.method.not.called) $$ 4 $$ method close $$ reader $$ java.io.FileReader $$ possible exceptional exit due to reader.read(data) with exception type java.io.IOException $$ ( 1797, 1856 ) $$ @MustCall method close may not have been invoked on reader or any of its aliases.
	   FileReader reader=new FileReader(new File("c:\\mxml.xml"));
	              ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.read(data) with exception type java.io.IOException
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/test/properties/PropertyLoader.java:9: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.InputStream $$ variable overwritten by assignment is = this.getClass().getClassLoader().getResourceAsStream("test/properties/package.properties") $$ ( 149, 235 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
		InputStream is = this.getClass().getResourceAsStream(
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: variable overwritten by assignment is = this.getClass().getClassLoader().getResourceAsStream("test/properties/package.properties")
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/test/properties/PropertyLoader.java:14: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.InputStream $$ regular method exit $$ ( 319, 412 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
		is=this.getClass().getClassLoader().getResourceAsStream("test/properties/package.properties");
		  ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:442: error: (required.method.not.called) $$ 4 $$ method close $$ j.write(new StringWriter()) $$ java.io.Writer $$ possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException $$ ( 22422, 22449 ) $$ @MustCall method close may not have been invoked on j.write(new StringWriter()) or any of its aliases.
            System.out.println(j.write(new StringWriter()));
                                      ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:920: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONObject)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 29730, 29759 ) $$ @MustCall method close may not have been invoked on ((JSONObject)v).write(writer) or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:922: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONArray)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 29834, 29862 ) $$ @MustCall method close may not have been invoked on ((JSONArray)v).write(writer) or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1536: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONObject)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 51572, 51601 ) $$ @MustCall method close may not have been invoked on ((JSONObject)v).write(writer) or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1538: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONArray)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 51676, 51704 ) $$ @MustCall method close may not have been invoked on ((JSONArray)v).write(writer) or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/nio/samples/JServer.java:122: error: (reset.not.owning) $$ 2 $$ bind $$ sch.socket() $$ ( 5119, 5142 ) $$ Calling method bind resets the must-call obligations of the expression sch.socket(), which is non-owning. Either annotate its declaration with an @Owning annotation, extract it into a local variable, or write a corresponding @CreatesMustCallFor annotation on the method that encloses this statement.
            sch.socket().bind(addr);
                             ^
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/nio/samples/JServer.java:124: error: (required.method.not.called) $$ 4 $$ method close $$ sel $$ java.nio.channels.Selector $$ regular method exit $$ ( 5226, 5247 ) $$ @MustCall method close may not have been invoked on sel or any of its aliases.
            sel = Selector.open();
                ^
  The type of object is: java.nio.channels.Selector.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/nio/samples/NBTimeServer.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ acceptSelector $$ java.nio.channels.Selector $$ possible exceptional exit due to ServerSocketChannel.open() with exception type java.io.IOException $$ ( 955, 1024 ) $$ @MustCall method close may not have been invoked on acceptSelector or any of its aliases.
		Selector acceptSelector = SelectorProvider.provider().openSelector();
		         ^
  The type of object is: java.nio.channels.Selector.
  Reason for going out of scope: possible exceptional exit due to ServerSocketChannel.open() with exception type java.io.IOException
../dataset/june2020_dataset/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/nio/samples/NBTimeServer.java:41: error: (reset.not.owning) $$ 2 $$ bind $$ ssc.socket() $$ ( 1340, 1362 ) $$ Calling method bind resets the must-call obligations of the expression ssc.socket(), which is non-owning. Either annotate its declaration with an @Owning annotation, extract it into a local variable, or write a corresponding @CreatesMustCallFor annotation on the method that encloses this statement.
		ssc.socket().bind(isa);
		                 ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
